apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magazik-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
  - host: magazik.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: magazik-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: magazik-backend-staging
            port:
              number: 8000
